--- a/custom.css
+++ b/custom.css
@@ -2,6 +2,11 @@ html, body {
   padding: 5px;
 }
 
+.navbar {
+  font-size: x-large;
+  height: 100px;
+}
+
 .hero-image {
   background-image: url('Assets/banner.png');
   background-size: cover;
